<resources>
    <string name="app_name">Random Walk</string>
    <string name="action_about">About</string>

    <string name="forward_button">Forward</string>
    <string name="back_button">Back</string>
    <string name="left_button">Left</string>
    <string name="right_button">Right</string>
    <string name="random_button">Random Button</string>

    <string name="directionText">Go %1$s!</string>
</resources>
